--- a/birds/static/styles.scss
+++ b/birds/static/styles.scss
@@ -44,19 +44,44 @@ div.tag-container {
 
 // Form
 div.form-container {
-    padding-right: 30px;
+    // padding-right: 30px;
     padding-left: 0px;
     margin-right: 15%;
     margin-left: 15%;
 
     form {
-        div.form-group {
-            margin-bottom: 15px;
+        div.container-part-1-2 {
+            float: left;
+            width: 50%;
+            padding-right: 50px;
         }
+        div.form-group {
+            display: table;
+            margin-bottom: 15px;
+            // min-height: 34px;
+
+            div.form-label {
+                // float: left;
+                display: table-cell;
+                // width: 50%;
+                text-align: right;
+            }
+            div.form-value {
+                // float: left;
+                display: table-cell;
+                width: 100%;
+            }
+        }
+
         label {
-            display: inline-block;
-            margin-bottom: 5px;
+            // display: inline-block;
+            // margin-bottom: 5px;
+            width: 100px;
+            padding: 7px 13px;
             font-weight: 700;
+        }
+        div.value {
+            padding: 7px 13px;  // 6px 12px + 1px border
         }
         input {
             display: block;
@@ -65,28 +90,6 @@ div.form-container {
             padding: 6px 12px;
             border: 1px solid #ccc;
             border-radius: 5px;
-        }
-        select {
-            display: block;
-            width: 100%;
-            height: 34px;
-            padding: 6px 12px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            cursor: pointer;
-            
-            option {
-                border: none;
-                background-color: inherit;
-                cursor: pointer;
-                display: block;
-                // padding: 3px 20px;
-                width: 100%;
-                text-align: left;
-            }  
-            option:hover {
-                background: #eee;
-            }
         }
         button.select {
             border: 1px solid #ccc;
@@ -162,4 +165,3 @@ div.dropdown {
         }
     }            
 }
- 
