--- a/birds/templates/project_tag.html
+++ b/birds/templates/project_tag.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block content %}
 
@@ -10,13 +11,12 @@
     
 <div class="jumbotron text-center">
     <p>Record #[[ record.id ]] from [[ project.name ]] project. [[ record.file.url ]]</p>
-    {% comment %} <audio controls preload="auto" style="width: 60%; min-width: 240px;">
-        <source type="audio/mpeg" data-ng-src="[[ record.file ]]">
-        Your browser does not support the audio element.
-    </audio> {% endcomment %}
-    <audio data-ng-src="[[ record.file ]]" controls preload="auto" style="width: 60%; min-width: 240px;">
+    <audio data-ng-src="{% get_media_prefix %}[[ record.filepath ]]" controls preload="auto" style="width: 60%; min-width: 240px;">
         Your browser does not support the audio element.
     </audio>
+    {% comment %} <audio data-ng-src="[[ record.file ]]" controls preload="auto" style="width: 60%; min-width: 240px;">
+        Your browser does not support the audio element.
+    </audio> {% endcomment %}
 </div>
 
 
@@ -26,7 +26,8 @@
         <div class="cell">
             <p>[[ tags[0].name ]]:</p>
             <button class="image tag" ng-click="addIdentification(tags[0].id)">
-                <img ng-src="[[ tags[0].image ]]" alt="[[ tags[0].name ]]" class="tag">
+                {% comment %} <img ng-src="[[ tags[0].image ]]" alt="[[ tags[0].name ]]" class="tag"> {% endcomment %}
+                <img ng-src="{% get_media_prefix %}[[ tags[0].imagepath ]]" alt="[[ tags[0].name ]]" class="tag">
             </button>
         </div>
         <div class="cell">
