--- a/birds/templates/registration/account_activation_invalid.html
+++ b/birds/templates/registration/account_activation_invalid.html
@@ -2,6 +2,12 @@
 
 {% block content %}
 
-<p>The confirmation link was invalid, possibly because it has already been used.</p>
+<main ng-controller="">
+
+    <h1>Account activation e-mail sent</h1>
+
+    <p>The confirmation link was invalid, possibly because it has already been used.</p>
+
+</main>
 
 {% endblock %}
