--- a/birds/templates/registration/account_activation_sent.html
+++ b/birds/templates/registration/account_activation_sent.html
@@ -2,6 +2,12 @@
 
 {% block content %}
 
-<p>Please click on the link sent to your e-mail to complete the registration.</p>
+<main ng-controller="">
+
+    <h1>Account activation e-mail sent</h1>
+
+    <p>Please click on the link sent to your e-mail to complete the registration.</p>
+
+</main>
 
 {% endblock %}
