--- a/birds/templates/registration/password_reset_form.html
+++ b/birds/templates/registration/password_reset_form.html
@@ -4,7 +4,8 @@
 
 <main ng-controller="" class="form-container">
 
-    <h1>Sign up</h1>
+    <h1>Password reset</h1>
+    <p>Enter your email address below, and we'll send you instructions for setting a new password.</p>
 
     <form method="post">
         {% csrf_token %}
@@ -20,13 +21,14 @@
             {% endfor %}
         </div>
         {% endfor %}
-        <button type="submit">Sign up</button>
+        <button type="submit">Reset password</button>
 	</form>
-			
+		
 	<div class="form-nav">
-		<p>Already have an account? <a href="{% url 'birds:login' %}">Login</a></p>
-		<p>Lost username or password? <a href="{% url 'birds:password_reset' %}">Password reset</a></p>
+		<p>Wait, I remember now! <a href="{% url 'birds:login' %}">Login</a></p>
+		<p>Don't have and account? <a href="{% url 'birds:signup' %}">Sign up</a></p>
 	</div>
 
 </main>
+
 {% endblock %}
