--- a/birds/templates/base.html
+++ b/birds/templates/base.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Birds</title>
+        <title>Animal recognition</title>
         <meta charset="utf-8"> 
         <!-- Bootstrap -->
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -26,8 +26,8 @@
                 <div>Hi <a href="{% url 'birds:profile' %}">{{user.username}}</a></div>
                 <div><a href="{% url 'birds:logout' %}">Logout</a></div>
             {% else %}
-                <div><a href="{% url 'birds:login' %}">Login</a></div>
-                <div><a href="{% url 'birds:signup' %}">Sign up</a></div>
+                <!-- <div><a href="{% url 'birds:login' %}">Login</a></div>
+                <div><a href="{% url 'birds:signup' %}">Sign up</a></div> -->
             {% endif %}
         </nav>
 
