Repaired Profile template

--- a/birds/templates/registration/profile.html
+++ b/birds/templates/registration/profile.html
@@ -4,7 +4,7 @@
 
 <main ng-controller="" class="form-container">
 
-    <h1>[[ user.username ]]</h1>
+    <h1>{{ user.username }}</h1>
 	
 	<form method="post">
 		{% csrf_token %}
