--- a/birds/static/styles.scss
+++ b/birds/static/styles.scss
@@ -128,7 +128,7 @@ div.form-nav {
 
 label {
     // display: inline-block;
-    width: 100px;
+    width: 100%;
     padding: 7px 13px;
     margin: 0;
     font-weight: 700;
