--- a/birds/templates/project_tag.html
+++ b/birds/templates/project_tag.html
@@ -8,45 +8,73 @@
 <div ng-show="error_message">[[ error_message ]]</div>
 <div ng-hide="error_message">
 
-    
-<div class="jumbotron text-center">
-    <p>Record #[[ record.id ]] from [[ project.name ]] project. [[ record.file.url ]]</p>
-    <audio data-ng-src="{% get_media_prefix %}[[ record.filepath ]]" controls preload="auto" style="width: 60%; min-width: 240px;">
-        Your browser does not support the audio element.
-    </audio>
-    {% comment %} <audio data-ng-src="[[ record.file ]]" controls preload="auto" style="width: 60%; min-width: 240px;">
-        Your browser does not support the audio element.
-    </audio> {% endcomment %}
-</div>
 
 
-<div class="tag-container">
-    <p class="lead">Please select the animal from the record:</p>
-    <div class="row">
-        <div class="cell">
-            <p>[[ tags[0].name ]]:</p>
-            <button class="image tag" ng-click="addIdentification(tags[0].id)">
-                {% comment %} <img ng-src="[[ tags[0].image ]]" alt="[[ tags[0].name ]]" class="tag"> {% endcomment %}
-                <img ng-src="{% get_media_prefix %}[[ tags[0].imagepath ]]" alt="[[ tags[0].name ]]" class="tag">
-            </button>
-        </div>
-        <div class="cell">
-            <button class="basic tag" ng-click="addIdentification(tags[1].id)">[[ tags[1].name ]]</button>
-        </div>
-        <div class="cell">
-            <div class="dropdown">
-                <button class="tag dropdown-toggle" data-toggle="dropdown">
-                    Other<span class="caret"></span>
-                </button>
-                <ul class="dropdown-menu">
-                    <li ng-repeat="tag in tags.slice(2) ">
-                        <button class="dropdown-choice" ng-click="addIdentification(tag.id)">[[ tag.name ]]</button>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</div>
+	<div class="jumbotron text-center" ng-switch="record.filetype">
+		<div ng-switch-when="image">
+			<p>Record #[[ record.id ]] from [[ project.name ]] project. [[ record.file.url ]]</p>
+			<img data-ng-src="{% get_media_prefix %}[[ record.filepath ]]" alt="[[ record.filename ]]" style="width: 60%; min-width: 240px;">
+		</div>
+		<div ng-switch-when="audio">
+			<p>Record #[[ record.id ]] from [[ project.name ]] project. [[ record.file.url ]]</p>
+			<audio data-ng-src="{% get_media_prefix %}[[ record.filepath ]]" controls preload="auto" style="width: 60%; min-width: 240px;">
+				Your browser does not support the audio element.
+			</audio>
+			{% comment %} <audio data-ng-src="[[ record.file ]]" controls preload="auto" style="width: 60%; min-width: 240px;">
+				Your browser does not support the audio element.
+			</audio> {% endcomment %}
+		</div>
+		<div ng-switch-when="video">
+			<p>Record #[[ record.id ]] from [[ project.name ]] project. [[ record.file.url ]]</p>
+			<video data-ng-src="{% get_media_prefix %}[[ record.filepath ]]" controls preload="auto" style="width: 60%; min-width: 240px;">
+			  	Your browser does not support the video element.
+			</video>
+		</div>
+		<div ng-switch-default>
+			<p>Unknown record type.</p>
+		</div>
+	</div>
+
+	<!-- <div class="jumbotron text-center">
+		<p>Record #[[ record.id ]] from [[ project.name ]] project. [[ record.file.url ]]</p>
+		<audio data-ng-src="{% get_media_prefix %}[[ record.filepath ]]" controls preload="auto"
+			style="width: 60%; min-width: 240px;">
+			Your browser does not support the audio element.
+		</audio>
+		{% comment %} <audio data-ng-src="[[ record.file ]]" controls preload="auto"
+			style="width: 60%; min-width: 240px;">
+			Your browser does not support the audio element.
+		</audio> {% endcomment %}
+	</div> -->
+
+	<div class="tag-container">
+		<p class="lead">Please select the animal from the record:</p>
+		<div class="row">
+			<div class="cell">
+				<p>[[ tags[0].name ]]:</p>
+				<button class="image tag" ng-click="addIdentification(tags[0].id)">
+					{% comment %} <img ng-src="[[ tags[0].image ]]" alt="[[ tags[0].name ]]" class="tag">
+					{% endcomment %}
+					<img ng-src="{% get_media_prefix %}[[ tags[0].imagepath ]]" alt="[[ tags[0].name ]]" class="tag">
+				</button>
+			</div>
+			<div class="cell">
+				<button class="basic tag" ng-click="addIdentification(tags[1].id)">[[ tags[1].name ]]</button>
+			</div>
+			<div class="cell">
+				<div class="dropdown">
+					<button class="tag dropdown-toggle" data-toggle="dropdown">
+						Other<span class="caret"></span>
+					</button>
+					<ul class="dropdown-menu">
+						<li ng-repeat="tag in tags.slice(2) ">
+							<button class="dropdown-choice" ng-click="addIdentification(tag.id)">[[ tag.name ]]</button>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</div>
 
 </div>
 
