Updated registration sites styles

--- a/birds/templates/registration/password_reset_complete.html
+++ b/birds/templates/registration/password_reset_complete.html
@@ -2,19 +2,16 @@
 
 {% block content %}
 
-<div class="row">
-	<aside class="col-sm-4"></aside>
-	<aside class="col-sm-4">
-		<h2>Password reset complete</h2>
-		<div class="card">
-			<article class="card-body">
-				<p>
-					Your password has been set. You may go ahead and <a href="{% url 'birds:login' %}">sign in</a> now.
-				</p>
-			</article>
-		</div>
-	</aside>
-	<aside class="col-sm-4"></aside>
-</div>
+<main ng-controller="">
+
+	<h1>Password reset complete</h1>
+
+	<p>Your password has been set succesffully!</p>
+
+    <div class="form-nav">
+        <p>Go ahead and <a href="{% url 'birds:login' %}">login</a></p>
+    </div>
+
+</main>
 
 {% endblock %}
