--- a/birds/templates/registration/profile.html
+++ b/birds/templates/registration/profile.html
@@ -23,6 +23,10 @@
 		<button type="submit">Change password</button>
 	</form>
 
+	<div class="form-nav">
+		<p>Back to <a href="{% url 'birds:project-list-view' %}">project overview</a></p>
+	</div>
+
 <div>
 
 {% endblock content %}
