--- a/birds/templates/registration/password_reset_confirm.html
+++ b/birds/templates/registration/password_reset_confirm.html
@@ -2,7 +2,38 @@
 
 {% block content %}
 
-<div class="row">
+<main ng-controller="" class="form-container">
+
+	<h1>Change Password</h1>
+	
+	{% if validlink %}
+		<form method="post">
+			{% csrf_token %}
+			{% for field in form %}
+			<div class="form-group">
+				{{ field.label_tag }}<br>
+				{{ field }}
+				{% if field.help_text %}
+					<div class="help-text">{{ field.help_text }}</div>
+				{% endif %}
+				{% for error in field.errors %}
+					<p class="error-message">{{ error }}</p>
+				{% endfor %}
+			</div>
+			{% endfor %}
+			<button type="submit">Change password</button>
+		</form>
+	{% else %}
+		<p>The password reset link was invalid, possibly because it has already been used. Please request a new password reset.</p>
+	{% endif %}
+	
+	<div class="form-nav">
+		<p>Wait, I remember now! <a href="{% url 'birds:login' %}">Login</a></p>
+	</div>
+
+</main>
+
+<!-- <div class="row">
 	<aside class="col-sm-4"></aside>
 	<aside class="col-sm-4">
 		<h2>Change Password</h2>
@@ -34,6 +65,6 @@
 		</div>
 	</aside>
 	<aside class="col-sm-4"></aside>
-</div>
+</div> -->
 
 {% endblock %}
